fix z-index burger

--- a/sass/_arno.scss
+++ b/sass/_arno.scss
@@ -8,6 +8,7 @@
         right: 0;
         padding: 20px;
         cursor: pointer;
+        z-index: 1000;
     }
 
     .menu {
